--- a/erpnext/templates/job-create-site.yaml
+++ b/erpnext/templates/job-create-site.yaml
@@ -55,6 +55,9 @@ spec:
             --db-type=$(DB_TYPE)
             --db-host=$(DB_HOST)
             --db-port=$(DB_PORT)
+            --db_ssl_ca=$(DB_SSL_CA)
+            --db_ssl_cert$(DB_SSL_CERT)
+            --db_ssl_key$(DB_SSL_KEY)
             --admin-password=$(ADMIN_PASSWORD)
             --mariadb-root-username=$(DB_ROOT_USER)
             --mariadb-root-password=$(DB_ROOT_PASSWORD)
