--- a/erpnext/templates/job-create-site.yaml
+++ b/erpnext/templates/job-create-site.yaml
@@ -50,12 +50,12 @@ spec:
         command: ["bash", "-c"]
         args:
           - >
+            bench set-config -g db_ssl_ca=$(DB_SSL_CA);
             bench new-site $(SITE_NAME)
             --no-mariadb-socket
             --db-type=$(DB_TYPE)
             --db-host=$(DB_HOST)
             --db-port=$(DB_PORT)
-            --db_ssl_ca=$(DB_SSL_CA)
             --admin-password=$(ADMIN_PASSWORD)
             --mariadb-root-username=$(DB_ROOT_USER)
             --mariadb-root-password=$(DB_ROOT_PASSWORD)
@@ -67,6 +67,7 @@ spec:
           {{- if .Values.jobs.createSite.forceCreate }}
             --force
           {{- end }}
+            ;bench show-config $(SITE_NAME)
             ;rm -f currentsite.txt
         env:
           - name: "SITE_NAME"
