--- a/erpnext/templates/job-create-site.yaml
+++ b/erpnext/templates/job-create-site.yaml
@@ -50,7 +50,8 @@ spec:
         command: ["bash", "-c"]
         args:
           - >
-            bench set-config -g db_ssl_ca "/var/run/secrets/kubernetes.io/ca-cert.pem" ;
+            bench set-config -g db_ssl_ca "/etc/ssl/certs/ca-cert.pem" ;
+            bench --site all show-config -f text;
             bench new-site $(SITE_NAME)
             --no-mariadb-socket
             --db-type=$(DB_TYPE)
@@ -138,7 +139,7 @@ spec:
           - name: logs
             mountPath: /home/frappe/frappe-bench/logs
           - name: certmount
-            mountPath: /var/run/secrets/kubernetes.io/ca-cert.pem
+            mountPath: /etc/ssl/certs/ca-cert.pem
             subPath: ca-cert.pem
             readOnly: true
       restartPolicy: Never
